# AgentForceAi

./: .gitignore  fix.py  fix2.py  fix3.py  fix_chat_messages.py  fix_errors.py  fix_errors2.py  fix_errors3.py  modify_agents.py  modify_chat.py  modify_chat_rs.py  modify_dialogs.py  modify_dialogs_save.py  modify_edit_agent.py  modify_executor.py  modify_executor2.py
agentforge-ui/: Cargo.toml  agentforge.db  agentforge.db-shm  agentforge.db-wal  guide.md  modify_executor.py  modify_executor3.py  test_input.rs
agentforge-ui/assets/office/: index.html
agentforge-ui/report/: agentforce_implementation_plan.md  agentforce_remediation_plan.md  agentforce_system_analysis_report.md  agentforce_technical_spec.md  cross_team_humanlike_and_markdown_report.md
agentforge-ui/src/: agentforge.db-shm  agentforge.db-wal  bin_test.rs  lib.rs  main.rs
agentforge-ui/src/application/: mod.rs
agentforge-ui/src/application/agents/: health.rs  identity.rs  lifecycle.rs  mod.rs  monitoring.rs  template.rs
agentforge-ui/src/application/cost_optimization/: core.rs  failover.rs  mod.rs  optimization.rs
agentforge-ui/src/application/cross_team_router/: coordination.rs  mod.rs  protocols.rs  routing.rs
agentforge-ui/src/application/doc_engine/: batch.rs  collaboration.rs  engine.rs  formats.rs  mod.rs  templates.rs
agentforge-ui/src/application/iflow_engine/: automation.rs  engine.rs  mod.rs  nodes.rs
agentforge-ui/src/core/: errors.rs  mod.rs
agentforge-ui/src/infrastructure/: mod.rs
agentforge-ui/src/ui/: mod.rs
agentforge-ui/themes/: agent.json
(+175 files in other folders)
