[package]
name = "agentforge-ui"
version = "0.1.0"
edition = "2021"
default-run = "agentforge-ui"

[dependencies]
gpui = "0.2.2"
gpui-component-assets = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust-i18n = "3.0"
anyhow = "1.0"
uuid = { version = "1.23.0", features = ["v4", "serde"] }
chrono = { version = "0.4.44", features = ["serde"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
rust-embed = "8.4"
futures = "0.3.32"
tokio = { version = "1.51.1", features = ["rt", "sync", "macros", "process", "full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
async-trait = "0.1.89"
notify = "6.1.1"
once_cell = "1.21.4"
rfd = "0.15"
reqwest-eventsource = "0.6.0"
async-stream = "0.3.6"
pulldown-cmark = "0.13.3"
walkdir = "2.5.0"
rand = "0.10.1"
thiserror = "2.0.18"
docx-rs = "0.4.20"
printpdf = { version = "0.7.0", default-features = false }
fastembed = "5.13.3"
urlencoding = "2.1.3"

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]

tao = { version = "0.25.0", default-features = false, features = ["rwh_05"] }


[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
gpui-component = { version = "0.5.1", features = ["webview"] }
wry = { package = "lb-wry", version = "0.53.3" }

[target.'cfg(not(any(target_os = "windows", target_os = "macos")))'.dependencies]
gpui-component = "0.5.1"
